--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,4 +13,8 @@ jobs:
       with:
         github_access_token: ${{ secrets.GITHUB_TOKEN }}
         extra_nix_config: "system-features = nixos-test benchmark big-parallel kvm"
+    - uses: cachix/cachix-action@v12
+      with:
+        name: stackptr
+        authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
     - run: nix flake check
