--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,18 @@ on:
     branches: main
 
 jobs:
-  tests:
-    runs-on: ubuntu-latest
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - host: glyph
+            system: x86_64-linux
+            runner: ubuntu-latest
+          - host: Rhizome
+            system: aarch64-darwin
+            runner: macos-latest
+    runs-on: ${{ matrix.runner }}
     steps:
     - uses: actions/checkout@v4
     - uses: cachix/install-nix-action@v31
@@ -17,3 +27,8 @@ jobs:
         name: stackptr
         authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
     - run: nix flake check
+    - name: Build NixOS system
+      run: |
+        nix build \
+          .#nixosConfigurations.${{ matrix.host }}.config.system.build.toplevel \
+          --system ${{ matrix.system }}
