Handle building darwin system

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
     - run: nix flake check
     - name: Build NixOS system
       run: |
-        nix build \
-          .#nixosConfigurations.${{ matrix.host }}.config.system.build.toplevel \
-          --system ${{ matrix.system }}
+        if [ "${{ matrix.system }}" = "aarch64-darwin" ]; then
+          nix build .#darwinConfigurations.${{ matrix.host }}.system
+        else
+          nix build .#nixosConfigurations.${{ matrix.host }}.config.system.build.toplevel
+        fi
