--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,6 +19,7 @@ jobs:
         run: nix flake update --commit-lock-file
 
       - uses: peter-evans/create-pull-request@v7
+        id: create-pr
         with:
           branch: gh/update-flake
           title: Update flake inputs
@@ -26,3 +27,8 @@ jobs:
             Automatic update of flake inputs
           # Use a PAT so that Workflows run on the created PR
           token: ${{ secrets.CREATE_PR_TOKEN }}
+      - if: ${{ steps.create-pr.outputs.pull-request-number }}
+        name: Enable auto-merge after requirements met
+        run: gh pr merge --squash --auto "${{ steps.create-pr.outputs.pull-request-number }}"
+        env:
+          GH_TOKEN: ${{ secrets.CREATE_PR_TOKEN }}
