--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,9 @@ jobs:
           - host: Rhizome
             system: aarch64-darwin
             runner: macos-latest
+          - host: spore
+            system: x86_64-linux
+            runner: ubuntu-latest
           - host: zeta
             system: aarch64-linux
             runner: ubuntu-24.04-arm
